# umto_site

./: README.md
backend/: .gitignore  pyproject.toml
backend/src/: cli.py  main.py
backend/src/api/: router.py
backend/src/api/endpoints/: auth.py  users.py
backend/src/core/: database.py
backend/src/schemas/: auth.py  users.py
backend/src/utils/: auth.py  users.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/scripts/: generate-client.js
frontend/src/api/: client.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/umtoffice/: page.tsx
frontend/src/components/: params.ts  tools.tsx
frontend/src/components/UI/: agent-select.tsx  tools.tsx  user-select.tsx
frontend/src/components/auth/: auth-context.tsx  auth-provider.tsx
frontend/src/components/navbar/: navbar.css  navbar.tsx
frontend/src/components/richtext/: ForwardRefEditor.tsx  InitializedMDXEditor.tsx
frontend/src/typing/: artifacts.ts  users.ts
